--- a/index.ipynb
+++ b/index.ipynb
@@ -258,7 +258,7 @@
     }
    ],
    "source": [
-    "countries append ['Malta'] # add code here\n",
+    "countries append ()'Malta'] # add code here\n",
     "countries"
    ]
   },
